<resources>
    <string name="app_name">Tasty</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="action_settings">"Settings"</string>
    <string name="backgroundsdsasdsadasd">Background</string>

    <string name="title_activity_sssagay">sssagy</string>
    <string name="scan_table">Scan table</string>
    <string name="cart">Cart</string>
    <string name="my_orders">My orders</string>
    <string name="history">History</string>
    <string name="account">Account</string>
    <string name="info">Info</string>
    <string name="night_mode">Night Mode</string>
</resources>
