<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/scan_table" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_restaurant_menu"
            android:title="@string/cart" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_orders"
            android:title="@string/my_orders" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_account_circle"
                android:title="@string/info" />
            <item
                android:id="@+id/nav_night"
                android:icon="@drawable/ic_signout"
                android:title="@string/night_mode" />
        </menu>
    </item>

</menu>